--- a/app/assets/stylesheets/candidates.sass
+++ b/app/assets/stylesheets/candidates.sass
@@ -1,6 +1,18 @@
+h1
+  margin: 20px !important
+h2
+  margin-bottom: 10px
+
 .recruitment
   display: flex
   align-items: center
-
+  .ui.cards
+    display: block
+    margin: 20px !important
   > div
-    margin: 0px 20px
+    padding: 20px
+    border-style: solid
+    border-color: grey
+    border-width: 1px
+    .card
+      margin: 40px 0px !important
