two pretty columns

--- a/app/assets/stylesheets/candidates.sass
+++ b/app/assets/stylesheets/candidates.sass
@@ -5,7 +5,7 @@ h2
 
 .recruitment
   display: flex
-  align-items: center
+  align-items: inherit
   .ui.cards
     display: block
     margin: 20px !important
